--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/css/styles.css">
+    <!-- <link rel="stylesheet" href="./components/css/imageFigurePosition.css"> -->
+   
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="container">
+      <div id="root" class="left-panel">Left Panel Content</div>
+      <div id="links" class="right-panel">Right Panel Content</div>
+    </div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
