--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/css/styles.css">
-    <!-- <link rel="stylesheet" href="./components/css/imageFigurePosition.css"> -->
-   
+    <link rel="stylesheet" href="./src/styles.css" />
+    <!-- <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css"> -->
+
     <title>Vite + React + TS</title>
   </head>
   <body>
